[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceclinicagent"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for clinic appointment booking agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "VoiceClinicAgent Team"}
]
dependencies = [
    "openenv-core>=0.1.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
